# Thor

./: LICENSE
cmake/toolchains/ios/: ios.toolchain.cmake
dependencies/include/cryptopp/: base64.h  dll.h
dependencies/include/tbb/: scalable_allocator.h
dependencies/include/tbb/internal/: _tbb_windef.h
thor/code/: CMakeLists.txt
thor/code/Thor/: CMakeLists.txt
thor/code/Thor/ContentTools/: CMakeLists.txt
thor/code/Thor/ContentTools/ContentPipeline/: CMakeLists.txt  DllMain.cpp  ThContentPipeline.cpp  ThContentPipeline.h  ThContentPipelineExport.h  ThContentPipelineFwd.h  ThiContentImporter.cpp  ThiContentImporter.h  ThiContentProcessingRule.h
thor/code/Thor/ContentTools/ContentPipelineStandAlone/: CMakeLists.txt  Main.cpp
thor/code/Thor/ContentTools/GeometryTools/: CMakeLists.txt  DllMain.cpp  ThFbxImporter.h  ThGeometryToolsExport.h  ThGeometryToolsFwd.h
thor/code/Thor/ContentTools/TextureTools/: CMakeLists.txt  DllMain.cpp  ThTextureImporter.cpp  ThTextureImporter.h  ThTextureToolsExport.h  ThTextureToolsFwd.h  ThTextureToolsUtils.cpp  ThTextureToolsUtils.h
thor/code/Thor/DataForge/: Compiler.cs  CompoundTypes.cs  Constants.cs  DataForge.csproj  DataForge.g  DataForge.sln  DataForge.userprefs  DataForgeLexer.cs  DataForgeParser.cs  DataForgeProject.g  DataForgeProjectLexer.cs  DataForgeProjectParser.cs  Expressions.cs  GeneratedFileDesc.cs  Initializers.cs  Options.cs  Package.cs  Program.cs  ProjectOptions.cs  StripGrammar.bat  Types.cs  Utitities.cs
thor/code/Thor/DataForge/templates/: DataForge.stg
thor/code/Thor/DataForge/test/: big_test.dff  i1.dff  i2.dff  struct_test.dff  test.dfp
thor/code/Thor/Framework/: CMakeLists.txt  Common.h  DllMain.cpp  FrameworkAI.inl  FrameworkAI.inl.tmpl  FrameworkFwd.h  FrameworkFwdInternal.h  ThAssemblyVersionInfo.cpp  ThAssemblyVersionInfo.h  ThAsyncOpManager.cpp  ThAsyncOpManager.h  ThComponentInstance.cpp  ThComponentInstance.h  ThFramework.cpp  ThFramework.h  ThHandle.h  ThMemory.h  ThMutexPolicy.h  ThObjectArena.cpp  ThObjectArena.h  ThObjectTable.cpp  ThObjectTable.h  ThObjectTableInternal.cpp  ThObjectTableInternal.h  ThObjectUtils.h  ThTbbTaskManager.cpp  ThTbbTaskManager.h  ThUUID.cpp  ThUUID.h  ThUniverse.cpp  ThUniverse.h  ThWorld.cpp  ThWorld.h  ThiApplication.cpp  ThiApplication.h  ThiAsyncResult.cpp  ThiAsyncResult.h  ThiComponent.cpp  ThiComponent.h  ThiComponentInterface.cpp  (+15 more)
thor/code/Thor/Framework/Containers/: TheContainerException.cpp
thor/code/Thor/Framework/DataModel/: ThBaseTypeFields.cpp  ThBaseTypeFields.h  ThDataModel.h  ThFieldTraits.h  ThXmlArchiveReader.cpp  ThXmlArchiveReader.h  ThXmlArchiveWriter.cpp  ThXmlArchiveWriter.h  ThiArchiveReader.cpp  ThiArchiveReader.h  ThiArchiveUtils.h  ThiArchiveWriter.cpp  ThiArchiveWriter.h  ThiEntity.cpp  ThiEntity.h  ThiEntityUserData.cpp  ThiEntityUserData.h  ThiEnumField.cpp  ThiEnumField.h  ThiField.cpp  ThiField.h  ThiHandleField.cpp  ThiHandleField.h  ThiListField.cpp  ThiListField.h  ThiMapField.cpp  ThiMapField.h  ThiRefPtrField.cpp  ThiRefPtrField.h  ThiStructField.cpp  ThiStructField.h  ThiWeakPtrField.cpp  ThiWeakPtrField.h
thor/code/Thor/Graphics/: CMakeLists.txt
thor/code/Thor/Graphics/GraphicsRuntimeDx11Component/: CMakeLists.txt  DirectX11.h  DllMain.cpp  ThDirectX11Renderer.cpp  ThDirectX11Renderer.h  ThGraphicsRuntimeDx11Export.h  ThGraphicsRuntimeDx11Fwd.h  ThHardwareBuffer.cpp  ThHardwareBuffer.h  ThHardwareResource.cpp  ThHardwareResource.h  ThTexture1D.cpp  ThTexture1D.h  ThTexture2D.cpp  ThTexture2D.h  ThTexture3D.cpp  ThTexture3D.h
thor/code/Thor/Graphics/GraphicsRuntimeSharedComponent/: CMakeLists.txt  DllMain.cpp  ThGraphicsRuntimeSharedExport.h  ThGraphicsRuntimeSharedFwd.h
thor/code/Thor/Graphics/GraphicsSceneComponent/: CMakeLists.txt  DllMain.cpp  ThGraphicsSceneExport.h  ThGraphicsSceneFwd.h
thor/code/Thor/Graphics/GraphicsWorkbench/: CMakeLists.txt  logorenderer.cpp  logorenderer.h  main.cpp  threadrenderer.cpp  threadrenderer.h
thor/code/Thor/Protocol/: BuildAll.bat  BuildSingle.bat
thor/code/Thor/Protocol/GeometryToolsProtocol/: GeometryToolsProtocol.dff  GeometryToolsProtocol.dfp
thor/code/Thor/Protocol/Test/: TestProtocol.dff  TestProtocol.dfp
thor/code/Thor/Protocol/TextureToolsProtocol/: TextureToolsProtocol.dff  TextureToolsProtocol.dfp
thor/code/Thor/Protocol/ThContentPipelineProtocol/: ThContentPipelineProtocol.dff  ThContentPipelineProtocol.dfp
thor/code/Thor/Protocol/ThFrameworkProtocol/: ThFrameworkProtocol.dff  ThFrameworkProtocol.dfp
thor/code/Thor/Protocol/ThGraphicsSceneProtocol/: ThGraphicsSceneProtocol.dff
thor/code/Thor/Tests/: CMakeLists.txt  TestDataModel.cpp  TestDx11Runtime.cpp
thor/doc/: DatabaseRequirements.mm  FrameworkLifetime.mm  FrameworkRunning.mm  FrameworkStartup.mm  ThField.mm
thor/lib/vc10_32/Debug/: DirectXTex_d.lib  cryptopp_d.lib  physfs_d.lib  tbb_debug.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib
thor/lib/vc10_32/Release/: DirectXTex.lib  cryptopp.lib  libboost_filesystem-mt.lib  libboost_system-mt.lib  physfs.lib  tbb.lib  tbbmalloc.lib  tbbmalloc_proxy.lib
thor/lib/vc12_64/Debug/: DirectXTex_d.lib  cryptopp_d.lib  glbinding_d.lib  glew32_d.lib  libphysfs_d.lib  physfs_d.lib  tbb_d.lib  tbbmalloc_d.lib  tbbmalloc_proxy_d.lib
thor/lib/vc12_64/Release/: cryptopp.lib  glbinding.lib  glew32.lib  libphysfs.lib  physfs.lib  tbb.lib  tbbmalloc.lib  tbbmalloc_proxy.lib
